Trying deploy with master branch

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thilakramanie.github.io/Portfolio-ReactJS/",
+  "homepage": "https://thilakramanie.github.io/Portfolio-ReactJS/index.html",
   "name": "new-portfolio",
   "private": true,
   "version": "0.0.0",
