--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thilakramanie.github.io/Portfolio-ReactJS/index.html",
+  "homepage": "https://thilakramanie.github.io/Portfolio-ReactJS/",
   "name": "new-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run dist",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
